labs/security/kubernetes-scanning/trivy-k8s/manifests/fixed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fixed-nginx
  labels:
    app: fixed-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fixed-nginx
  template:
    metadata:
      labels:
        app: fixed-nginx
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          imagePullPolicy: IfNotPresent 
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
              ephemeral-storage: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "128Mi"
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: fixed-nginx
                topologyKey: kubernetes.io/hostname
