labs/security/kubernetes-scanning/trivy-k8s/manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fixed-nginx-network-policy
spec:
  podSelector:
    matchLabels:
      app: fixed-nginx
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector: {}
